--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,4 +63,7 @@
                 android:layout_height="wrap_content"/>
 
     </LinearLayout>
+    <ListView android:layout_width="match_parent"
+              android:id="@+id/listView"
+              android:layout_height="match_parent"></ListView>
 </LinearLayout>
